--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,20 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.jinjue</groupId>
-    <artifactId>myproject</artifactId>
+    <artifactId>my-project</artifactId>
     <version>1.0.0</version>
     <packaging>pom</packaging>
+
+    <name>my-project</name>
+    <description>我的个人项目</description>
+
+    <modules>
+        <!-- 公共 -->
+        <module>common</module>
+        <module>application</module>
+        <module>demo</module>
+    </modules>
+
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -470,11 +481,6 @@
         </repository>
     </repositories>
 
-    <modules>
-        <!-- 公共 -->
-        <!--<module>common</module>-->
-        <module>demo</module>
-    </modules>
 
     <licenses>
         <license>
