--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <!-- 公共 -->
         <module>common</module>
         <module>application</module>
-        <module>demo</module>
+        <module>spring-boot-demo</module>
     </modules>
 
     <properties>
@@ -77,16 +77,16 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
-        <!--<dependency>
+        <!--dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
             <version>${commons-collections4.version}</version>
         </dependency>-->
-        <!--<dependency>
+        <dependency>
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
             <version>${commons-beanutils.version}</version>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
