--- a/spring-boot-demo/pom.xml
+++ b/spring-boot-demo/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>jpa-demo</module>
         <module>druid-demo</module>
+        <module>excel-demo</module>
     </modules>
 
 
